hphp/test/zend/good/tests/classes/visibility_000b.php.expectf

Fatal error: Access level to fail::f0() must be public (as in class same) or weaker in %s/visibility_000b.php on line 21
